<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_corner3"
        android:elevation="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/appTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner3"
        android:elevation="10dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/welcome_tagline"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corner3"
        android:elevation="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/username_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTagline"
        app:layout_constraintEnd_toStartOf="@id/editUsername"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:autofillHints="@string/hint_username"
        android:background="@drawable/rounded_corner2"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textUsername"
        app:layout_constraintStart_toEndOf="@id/textUsername"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corner3"
        android:elevation="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/password_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUsername"
        app:layout_constraintEnd_toStartOf="@id/editPassword"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_corner2"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textPassword"
        app:layout_constraintStart_toEndOf="@id/textPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="monospace"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="monospace"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
